; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/network/ping/extr_ping.c_PrintStats.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/network/ping/extr_ping.c_PrintStats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EchosSent = common dso_local global double 0.000000e+00, align 8
@EchosReceived = common dso_local global double 0.000000e+00, align 8
@StdOut = common dso_local global i32 0, align 4
@IDS_STATISTICS = common dso_local global i32 0, align 4
@Address = common dso_local global i32 0, align 4
@EchosSuccessful = common dso_local global double 0.000000e+00, align 8
@RTTTotal = common dso_local global double 0.000000e+00, align 8
@IDS_APPROXIMATE_RTT = common dso_local global i32 0, align 4
@RTTMin = common dso_local global i32 0, align 4
@RTTMax = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @PrintStats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PrintStats() #0 {
  %1 = alloca double, align 8
  %2 = alloca double, align 8
  %3 = alloca double, align 8
  %4 = load double, double* @EchosSent, align 8
  %5 = load double, double* @EchosReceived, align 8
  %6 = fsub double %4, %5
  store double %6, double* %1, align 8
  %7 = load double, double* %1, align 8
  %8 = load double, double* @EchosSent, align 8
  %9 = fdiv double %7, %8
  %10 = fmul double %9, 1.000000e+02
  store double %10, double* %2, align 8
  %11 = load i32, i32* @StdOut, align 4
  %12 = load i32, i32* @IDS_STATISTICS, align 4
  %13 = load i32, i32* @Address, align 4
  %14 = load double, double* @EchosSent, align 8
  %15 = load double, double* @EchosReceived, align 8
  %16 = load double, double* %1, align 8
  %17 = load double, double* %2, align 8
  %18 = call i32 (i32, i32, i32, double, double, ...) @ConResPrintf(i32 %11, i32 %12, i32 %13, double %14, double %15, double %16, double %17)
  %19 = load double, double* @EchosSuccessful, align 8
  %20 = fcmp ogt double %19, 0.000000e+00
  br i1 %20, label %21, label %32

21:                                               ; preds = %0
  %22 = load double, double* @RTTTotal, align 8
  %23 = load double, double* @EchosSuccessful, align 8
  %24 = fdiv double %22, %23
  store double %24, double* %3, align 8
  %25 = load i32, i32* @StdOut, align 4
  %26 = load i32, i32* @IDS_APPROXIMATE_RTT, align 4
  %27 = load i32, i32* @RTTMin, align 4
  %28 = load i32, i32* @RTTMax, align 4
  %29 = sitofp i32 %28 to double
  %30 = load double, double* %3, align 8
  %31 = call i32 (i32, i32, i32, double, double, ...) @ConResPrintf(i32 %25, i32 %26, i32 %27, double %29, double %30)
  br label %32

32:                                               ; preds = %21, %0
  ret void
}

declare dso_local i32 @ConResPrintf(i32, i32, i32, double, double, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
